--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,9 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body *{
+  font-family: 'Montserrat', sans-serif;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: #ede7d5;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,15 +13,108 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container{
+  padding: .4em;
+  max-width: 1000px;
+  width: 90%;
+  height: 90vh;
+  min-width: 300px;
+  background-color: #7b8a84;
+  min-height: 600px;
+  color: #333;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  box-sizing: border-box;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+/* Input e botão de add tarefas */
+.container-task{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+  box-sizing: border-box;
+}
+.container-task label,button{ width: 100%; margin-top: 5px;}
+.container-task p {text-align: center; color: #fff;}
+.taskInput input{
+  padding: 1.5em;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  background-color: #fff;
+  width: 100%;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  
+}
+.taskInput{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+.taskInput input:focus-visible{
+  outline: none;
+}
+.container-task button{
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  padding: 1em;
+  background-color: #2b879e;
+  border: 1px solid #fff;
+  border-radius: 10px;
+  color: #fff;
+  font-weight: bold;
+}
+/* fim do container de criação de task */
+
+
+/* tasks */
+.task{
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  margin: 10px 0;
+  background-color: #fff;
+  border-radius: 25px;
+  padding: 1em;
+  transition: .5s;
+  transform: translateY(0);
+}
+.task p{font-weight: bold; font-size: 16px;}
+.task:hover{
+  transition: .5s;
+  transform: scale(1.03)!important;
+}
+.newTask{
+  transition: .5s;
+  transform: translateY(50);
+}
+.task *{margin: 5px;}
+.task button{
+  padding: 1em;
+  border: none;
+  font-weight: bold;
+  font-size: 14px;
+  border-radius: 10px;
+  color: #fff;
+  background-color: #2b879e;
+}
+
+
+.closedTask{
+  text-decoration: line-through;
+}
+
+/* fim das task */
+
+@media only screen and (min-width: 300px) and (max-width: 500px){
+  .container{
+    margin: 1em;
   }
 }
+
+
