--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,15 @@
 
+body{
+  height: 100%;
+  background-color: #ede7d5;
+}
 body *{
   font-family: 'Montserrat', sans-serif;
+  
 }
 .App-header {
   background-color: #ede7d5;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,7 +22,7 @@ body *{
   padding: .4em;
   max-width: 1000px;
   width: 90%;
-  height: 90vh;
+  /* height: 90vh; */
   min-width: 300px;
   background-color: #7b8a84;
   min-height: 600px;
@@ -107,6 +112,7 @@ body *{
 
 .closedTask{
   text-decoration: line-through;
+  font-weight: 400!important;
 }
 
 /* fim das task */
